GeneralUtil IO methods JDK 7 compatible & Hitbox now abstract class
- Made the GeneralUtil IO methods JDK 7 compatible.
- Added a "charset" parameter to the GeneralUtil IO methods.
- Made Hitbox an abstract class.